--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
     </h2>
     <div class="images">
       <div class="pic1" id="pic1">
-        <img id="profile1" src="/assets/chum.jpg">
+        <img id="profile1" src="assets/chum.jpg">
         <p>Chum Cheran Obial</p>
       </div>
       <br>
       <div class="pic1" id="pic2">
-        <img id="profile1" src="/assets/chum.jpg">
+        <img id="profile1" src="assets/chum.jpg">
         <p>Chum Cheran Obial</p>
       </div>
       <br>
       <div class="pic1" id="pic3">
-        <img id="profile1" src="/assets/chum.jpg">
+        <img id="profile1" src="assets/chum.jpg">
         <p>Chum Cheran Obial</p>
       </div>
       <br>
       <div class="pic1" id="pic4">
-        <img id="profile1" src="/assets/chum.jpg">
+        <img id="profile1" src="assets/chum.jpg">
         <p>Chum Cheran Obial</p>
       </div>
       <br>
