--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       <br>
       <div class="pic1" id="pic5">
-        <img id="profile1" src="/assets/chum.jpg">
+        <img id="profile1" src="assets/chum.jpg">
         <p>Chum Cheran Obial</p>
       </div>
 
