--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
     </div>
 
   </section>
+
+  <div class="credits">
+    <p>SFD @2024. ALL RIGHTS TO SFD2024</p>
+  </div>
  
-  
 </body>
 </html>
 
